--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <input type="button" onclick="location.href='agreepage.html';" value="Agree Page" />
         <button class="hide-rage">hide rage</button>
-        <button class="togglelight-btn no-select" onclick="toggleTheme()">&#10022;</button>
+        <button class="togglelight-btn" onclick="toggleTheme()">&#10022;</button>
     </header>
 
     <div class="reading-experience">
